# QuicMitm

./: 76f7e793.0  Cargo.toml  bad_quic_trace.md  build.rs  capture.pcap  democacert.pem  democacert2.der  democacert2.pem  democacert2_bad.pem  democacert3.pem  democacert3a.pem  democacert5.pem  democakey.pem  democakey2.der  democakey2.pem  democakey2_bad.pem  democakey3.pem  democakey5.pem  democakey6.pem  demoendcert.pem  drcgen.patch  fuk1.txt  fuk2.txt  good_quic_trace.md  goodali.pcap  h2_h3_table_discover.md  httpRequestDump  hyperium_intermediate.pem  hyperium_intermediate_key.pem  index.html  iptablesForAndroid.md  localTestCert.pem  localTestKey.pem  mycacert.pem  mycakey.pem  myservercert.pem  myserverkey.pem  newcert5.pem  newcert6.pem  newdemocacert.pem
csvdata/: com.alibaba.intl.android.apps.poseidon.csv
leakanalysis/: demo-h2.json  demo-h2h3.json
leakresult/: demo.json
pbdata/: demo-h2h3.pb  demo.pb  demo_h2h3.pb
report/: com.alibaba.intl.android.apps.poseidon.txt
src/: cert_generate_util.rs  data.proto  data.rs  db.rs  events.rs  httpreq.proto  leak.json  leak.rs  lib.rs  main.rs  main1.rs  main_h1_h2_h3.rs  main_hickory_client.rs  main_hyper_client.rs  main_naive_proxy.rs  main_quinn_proxy.rs  main_simple_h3.rs  main_tcp_tunnel.rs  main_test_rcgen.rs
