[package]
name = "h3server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40.0", features = ["full"]}
rustls = { version = "0.23", default-features = false, features = [
    "logging",
    "ring",
    "std",
] }
rustls-pemfile = "2.1.3"
quinn = { version = "0.11", default-features = false, features = [
    "runtime-tokio",
    "rustls",
    "ring",
] }
anyhow = "1.0.89"
h3-quinn = "0.0.7"
h3 = "=0.0.6"
bytes = "1.7.2"
http = "1.1.0"

