[package]
name = "h3server"
version = "0.1.0"
edition = "2021"
description = "proxy server for http1 / http2 / http3"

[[bin]]
name = "main_h1_h2_h3_proxy"
path = "src/bin/main_h1_h2_h3_proxy.rs"

[[bin]]
name = "main_h1_h2_proxy"
path = "src/bin/main_h1_h2_proxy.rs"

[[bin]]
name = "test_mongodb"
path = "src/bin/test_mongodb.rs"

[[bin]]
name = "test_db_read_req"
path = "src/bin/test_db_read_req.rs"


[dependencies]
tokio = { version = "1.40.0", features = ["full"]}
rustls = { version = "0.23", default-features = false, features = [
    "logging",
    "ring",
    "std",
] }
rustls-pemfile = "2.1.3"
quinn = { version = "0.11", default-features = false, features = [
    "runtime-tokio",
    "rustls",
    "ring",
] }
# anyhow = "1.0.89"
h3-quinn = "0.0.7"
h3 = "=0.0.6"
bytes = "1.7.2"
http = "1.1.0"
hyper = { version = "1.4.1", features = ["full"] }
http-body-util = "0.1.2"
hyper-util = { version = "0.1", features = ["full"] }
tokio-rustls = "0.26.0"
# Users that wish to customize the provider in use can do so when constructing ClientConfig
# and ServerConfig instances using the with_crypto_provider method on the respective config builder types.
# See the crypto::CryptoProvider documentation for more details.
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
rcgen = { version = "0.13.1", features = ["pem", "x509-parser", "crypto"] }
time = "0.3.36"
pem = "3.0.4"
webpki-roots = "0.26.6"
futures = "0.3.31"
prost = "0.13.3"
once_cell = "1.20.2"
mongodb = "3.1.0"


[build-dependencies]
prost-build = "0.13.3"
# rustls-pki-types = "1.10.0"

# [patch.crates-io]
# rcgen = { git = "https://github.com/jiangshaoqi/rcgen.git" }

# [build-dependencies]
# cargo-patch = "0.3"

# [package.metadata.patch.rcgen]
# version = "0.13.1"
# patches = [
#     "drcgen.patch"
# ]


