[package]
name = "h3server"
version = "0.1.0"
edition = "2021"
description = "proxy server for http1 / http2 / http3"

[[bin]]
name = "main_h1_h2_h3_proxy"
path = "src/bin/main_h1_h2_h3_proxy.rs"

[[bin]]
name = "main_h3_tls_proxy"
path = "src/bin/main_h3_tls_proxy.rs"

[[bin]]
name = "main_h1_h2_proxy"
path = "src/bin/main_h1_h2_proxy.rs"

[[bin]]
name = "main_h123_raw_proxy"
path = "src/bin/main_h123_raw_proxy.rs"

# [[bin]]
# name = "raw_db_to_pb"
# path = "src/bin/raw_db_to_pb.rs"

[[bin]]
name = "data_to_pb"
path = "src/bin/data_to_pb.rs"

[[bin]]
name = "leak_analysis_main"
path = "src/bin/leak_analysis_main.rs"

[[bin]]
name = "leak_result_main"
path = "src/bin/leak_result_main.rs"

# [[bin]]
# name = "read_csv_generate_report"
# path = "src/bin/read_csv_generate_report.rs"


[dependencies]
tokio = { version = "1.40.0", features = ["full"]}
rustls = { version = "0.23", default-features = false, features = [
    "logging",
    "ring",
    "std",
] }
rustls-pemfile = "2.1.3"
quinn = { version = "0.11", default-features = false, features = [
    "runtime-tokio",
    "rustls",
    "ring",
] }
# anyhow = "1.0.89"
h3-quinn = "0.0.7"
h3 = "=0.0.6"
bytes = "1.7.2"
http = "1.1.0"
hyper = { version = "1.4.1", features = ["full"] }
http-body-util = "0.1.2"
hyper-util = { version = "0.1", features = ["full"] }
tokio-rustls = "0.26.0"
# Users that wish to customize the provider in use can do so when constructing ClientConfig
# and ServerConfig instances using the with_crypto_provider method on the respective config builder types.
# See the crypto::CryptoProvider documentation for more details.
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
rcgen = { version = "0.13.1", features = ["pem", "x509-parser", "crypto"] }
time = "0.3.36"
pem = "3.0.4"
webpki-roots = "0.26.6"
futures = "0.3.31"
prost = "0.13.3"
once_cell = "1.20.2"
mongodb = "3.1.0"
tree_magic_mini = "3.1.6"
flate2 = "1.0.34"
csv = "1.3.0"
tracing = { version = "0.1.10", default-features = false, features = ["std"] }
tracing-futures = { version = "0.2.0", default-features = false, features = ["std-future"] }
tracing-subscriber = { version = "0.3.0", default-features = false, features = ["env-filter", "fmt", "ansi", "time", "local-time"] }
zip = "2.2.1"
zstd = "0.13.2"
brotli-decompressor = "4.0.1"
base64 = "0.22.1"
rayon = "1.10.0"
sha2 = "0.10"
sha1 = "0.10"
md-5 = "0.10"


[build-dependencies]
prost-build = "0.13.3"
# rustls-pki-types = "1.10.0"


